[package]
name = "gst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive"] }
env_logger = "0.10.0"
flate2 = "1.0.27"
git2 = "0.18.1"
log = "0.4.20"
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tar = "0.4.40"
tokio = { version = "1.32.0", features = ["full"]}
url = "2.4.1"
